--- a/prova/style.css
+++ b/prova/style.css
@@ -16,27 +16,21 @@ ul {
 
 a {
     text-decoration: none;
-    color: black;
+    color: rgb(255, 254, 254);
+    background-color:  #52287a;
 }
 
 h1 {
-    color: black;
+    color:  #ffffff;
     font-size: 2rem;
 }
 
-button {
-    padding: 10px 15px;
-    border-radius: 8px;
-    font-weight: bold;
-    background-color: transparent;
-    font-family: 'Montserrat', sans-serif;
-}
 
 header {
     background:no-repeat center/cover url('https://images.mlssoccer.com/image/private/t_editorial_landscape_12_desktop/mls-orl-prd/j9svagcr5gxidvdea0eu.jpg');
     height: calc(100vh - 150px);
     margin:  auto 0px;
-    background-color: #8238c7;
+
 }
 
 header nav{
@@ -47,7 +41,7 @@ header nav{
 
 header nav p {
     font-weight: bold;
-    background: #8238c7;
+    background: #52287a;
 }
 
 header nav ul{
@@ -65,7 +59,8 @@ header nav ul li {
     max-width: 400px;
     margin:  150px auto;
     text-align: center;
-    background-color: #8238c7;
+    background-color: #52287a;
+    border-radius: 20px;
 }
 
 .header-content h1{
@@ -76,7 +71,7 @@ header nav ul li {
 
 .jogadoras {
     
-
+    background-color: #52287a;
     padding: 15px;
 }
 
@@ -162,7 +157,7 @@ header nav ul li {
     position: absolute;
     left: 0;
     top: 160px;
-    background: rgb(120, 73, 180);
+    background: rgb(219, 205, 238);
     border-radius: 0 8px 8px 0;
     padding: 5px 10px;
 }
@@ -177,6 +172,7 @@ header nav ul li {
 
 .historia{
     padding: 15px;
+    background-color: #9c71c5;
 }
 
 .historia .historia-tittle {
@@ -200,4 +196,39 @@ header nav ul li {
 .historia .card .card-content{
     height: 180px;
     text-align: center;
+}
+
+.contato {
+    padding:  60px;
+
+    position: relative;
+    text-align: center;
+}
+
+.contato .contato-card {
+    width: 350px;
+    height: 300px;
+    background-color: white;
+    position: absolute;
+    z-index: 99;
+    border-radius: 8px;
+    top: calc(50% - 200px);
+    left: calc(20% - 125px);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.contato .contato-card li {
+    padding-left: 50px;
+    text-align: left;
+}
+.contato .contato-card li {
+    font-size: .8rem;
+    font-weight: bold;
+    color: rgb(109, 55, 134);
+    display: flex;
+    align-items: center;
 }
